blue-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
      - image: hashicorp/http-echo   
        name: container-blue
        args:
        - "-listen=:8080"
        - "-text='I am blue'"

---

apiVersion: v1
kind: Service
metadata:
  name: blue-app
spec:
  selector:
    app: blue-app
  ports:
  - name: blue-app-svc
    targetPort: 8080
    port: 8080
    protocol: TCP
  type: NodePort
