nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: normal-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx 
    kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: facets.app
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service: 
                name: blue-app
                port:
                  number: 8080

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: canary-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "25"  # Forward 25% of the traffic to the canary ingress.
    kubernetes.io/elb.port: '80'
spec:
  rules:
    - host: facets.app
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service: 
                name: green-app   
                port: 
                  number: 8080
